tools/tests/errors/surf_num_04.ki
# Zero raised to a negative power is undefined and must raise.
discard 0 ** -1
